Add user and password config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 
-cassandra.contactpoints=192.168.57.203
+cassandra.contactpoints=192.168.56.203
 cassandra.port=9042
-cassandra.keyspace=showcase
+cassandra.keyspace=
 cassandra.basePackages=test
+cassandra.username=cassandra
+cassandra.password=cassandra
