--- a/build.gradle
+++ b/build.gradle
@@ -7,17 +7,15 @@ apply plugin: 'io.spring.dependency-management'
 
 group = 'com.uvt.dw'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '12'
+sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-
-	compileOnly("org.projectlombok:lombok:1.16.10")
 	implementation 'org.springframework.boot:spring-boot-starter-data-cassandra'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'com.codahale.metrics:metrics-core:3.0.2'
 }
